<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".MainActivity" >
    <GridView
            android:id="@+id/locationGridView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth"
            android:verticalSpacing="10dp"
            android:horizontalSpacing="10dp"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_alignParentTop="true"
            />


    <ListView
            android:id="@+id/deviceListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/locationGridView"
            android:layout_above="@+id/pairButtonGroup"
            android:background="@drawable/horse"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"/>


    <RelativeLayout
            android:id="@+id/pairButtonGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            >
        <Button
                android:id="@+id/finishButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/finish"
                android:onClick="finishClick"
                android:visibility="visible"
                />

        <Button
                android:id="@+id/clearSelectedButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/clearSelected"
                android:layout_toRightOf="@+id/finishButton"
                android:onClick="clearSelectedClick"
                android:visibility="visible"
                />

        <Button
                android:id="@+id/clearButton"
                android:layout_toRightOf="@+id/clearSelectedButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/clearAll"
                android:onClick="clearClick"
                android:visibility="visible"
                />
    </RelativeLayout>

    <RadioGroup
            android:id="@+id/modeGroup"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:visibility="invisible"
            android:layout_above="@+id/connectButtonGroup"
            android:paddingBottom="5dp"
            android:layout_marginBottom="5dp">

        <RadioButton
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mode_text"
                android:onClick="onRadioButtonClicked"/>
        <RadioButton
                android:id="@+id/textLong"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mode_text_long"
                android:onClick="onRadioButtonClicked"/>

        <RadioButton
                android:id="@+id/binary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mode_binary"
                android:onClick="onRadioButtonClicked"/>

        <RadioButton
                android:id="@+id/binLong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mode_binary_long"
                android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
    <RelativeLayout
            android:id="@+id/connectButtonGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"

            >

        <EditText
                android:id="@+id/rateEntry"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/rate"
                android:textSize="14sp"
                android:inputType="numberDecimal"/>

        <Button
                android:id="@+id/connectButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/connect"
                android:layout_toRightOf="@+id/rateEntry"
                android:onClick="connectClick"/>

        <Button
                android:id="@+id/streamButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/stream"
                android:layout_toRightOf="@+id/connectButton"
                android:onClick="streamClick"/>

        <Button
                android:id="@+id/stopButton"
                android:layout_toRightOf="@+id/streamButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/stop"
                android:onClick="stopClick"/>
    </RelativeLayout>

</RelativeLayout>