<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                tools:context=".ConnectionsActivity"
                android:background="#22496b">


    <GridView
            android:id="@+id/connectionLocationGridView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth"
            android:verticalSpacing="10sp"
            android:horizontalSpacing="10sp"
            android:gravity="fill"
            android:layout_marginBottom="5sp"
            android:layout_alignParentTop="true"
            />

    <ProgressBar
            android:id="@+id/progress"
            style="@android:style/Widget.ProgressBar.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            android:layout_below="@id/connectionLocationGridView"
            />

    <RadioGroup
            android:id="@+id/modeGroup"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_above="@+id/rateGroup"
            android:background="@drawable/grid_background_default"
            >


        <RadioButton
                android:id="@+id/text"
                android:textSize="18sp"
                android:layout_gravity="fill"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/mode_text"
                android:layout_marginRight="5dp"
                android:onClick="onRadioButtonClicked"/>

        <RadioButton
                android:id="@+id/textLong"
                android:textSize="18sp"
                android:layout_gravity="fill"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginRight="5dp"
                android:text="@string/mode_text_long"
                android:onClick="onRadioButtonClicked"/>

        <RadioButton
                android:id="@+id/binary"
                android:textSize="18sp"
                android:layout_gravity="fill"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginRight="5dp"

                android:text="@string/mode_binary"
                android:onClick="onRadioButtonClicked"/>

        <!--<RadioButton-->
        <!--android:id="@+id/binLong"-->
        <!--android:textSize="18sp"-->
        <!--android:layout_gravity="fill"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="50sp"-->
        <!--android:text="@string/mode_binary_long"-->
        <!--android:onClick="onRadioButtonClicked"/>-->
    </RadioGroup>

    <RelativeLayout
            android:id="@+id/rateGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_above="@+id/connectButtonGroup"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/grid_background_default"
            >

        <TextView
                android:id="@+id/rateLabel"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/rate"
                android:gravity="center_vertical"
                android:textSize="18sp"
                />

        <EditText
                android:id="@+id/rateEntry"
                android:layout_height="50dp"
                android:layout_width="75dp"
                android:inputType="numberDecimal"
                android:layout_toRightOf="@+id/rateLabel"
                />
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/connectButtonGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5sp"
            >

        <Button
                android:id="@+id/connectButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginRight="5sp"
                android:text="@string/connect"
                android:layout_toRightOf="@+id/rateEntry"
                android:onClick="connectClick"
                android:background="@android:drawable/btn_default"/>


        <Button
                android:id="@+id/stopButton"
                android:layout_toRightOf="@+id/connectButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="5sp"
                android:text="@string/stop"
                android:onClick="stopClick"
                android:background="@android:drawable/btn_default"/>
    </RelativeLayout>

</RelativeLayout>

